Ampliar NEPSY-II con todas las subpruebas (32 tests)
- Atención y Función Ejecutiva: 5 tests
- Lenguaje: 5 tests
- Memoria y Aprendizaje: 10 tests (incluye diferidas)
- Procesamiento Sensoriomotor: 3 tests
- Percepción Social: 2 tests
- Procesamiento Visoespacial: 4 tests
- Total: 32 subpruebas organizadas por dominios

--- a/config.html
+++ b/config.html
@@ -813,10 +813,66 @@
 
                     <!-- NEPSY-II -->
                     <div class="battery-group">
-                        <h3 class="battery-title">NEPSY-II (Lenguaje)</h3>
+                        <h3 class="battery-title">NEPSY-II (Evaluación Neuropsicológica)</h3>
+                        
                         <div class="battery-section">
+                            <h4 class="section-title">Atención y Función Ejecutiva</h4>
                             <div class="test-item" draggable="true" 
-                                 data-test="comp_instrucciones" 
+                                 data-test="nepsy_atencion_auditiva" 
+                                 data-domain="atencion"
+                                 data-chc="ga"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Atención Auditiva</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_respuesta_conjunto" 
+                                 data-domain="atencion"
+                                 data-chc="ga"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Respuesta de Conjunto</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_atencion_visual" 
+                                 data-domain="atencion"
+                                 data-chc="ga"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Atención Visual</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_inhibicion" 
+                                 data-domain="atencion"
+                                 data-chc="ga"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Inhibición</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_estatuas" 
+                                 data-domain="atencion"
+                                 data-chc="ga"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Estatuas</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                        </div>
+
+                        <div class="battery-section">
+                            <h4 class="section-title">Lenguaje</h4>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_comp_instrucciones" 
                                  data-domain="lenguaje"
                                  data-chc="gc"
                                  data-scale="scalar"
@@ -826,7 +882,7 @@
                                 <span class="test-scale">Escalar</span>
                             </div>
                             <div class="test-item" draggable="true" 
-                                 data-test="proc_fonologico" 
+                                 data-test="nepsy_proc_fonologico" 
                                  data-domain="lenguaje"
                                  data-chc="gc"
                                  data-scale="scalar"
@@ -836,13 +892,239 @@
                                 <span class="test-scale">Escalar</span>
                             </div>
                             <div class="test-item" draggable="true" 
-                                 data-test="vel_denominacion" 
+                                 data-test="nepsy_vel_denominacion" 
                                  data-domain="lenguaje"
                                  data-chc="gs"
                                  data-scale="scalar"
                                  data-battery="NEPSY-II">
                                 <span class="drag-handle">⋮⋮</span>
                                 <span class="test-name">Velocidad de Denominación</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_produccion_palabras" 
+                                 data-domain="lenguaje"
+                                 data-chc="gc"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Producción de Palabras</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_repeticion_oraciones" 
+                                 data-domain="lenguaje"
+                                 data-chc="gwm"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Repetición de Oraciones</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                        </div>
+
+                        <div class="battery-section">
+                            <h4 class="section-title">Memoria y Aprendizaje</h4>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_memoria_narrativa" 
+                                 data-domain="memoria"
+                                 data-chc="gwm"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Memoria Narrativa</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_memoria_narrativa_diferida" 
+                                 data-domain="memoria"
+                                 data-chc="gwm"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Memoria Narrativa Diferida</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_memoria_nombres" 
+                                 data-domain="memoria"
+                                 data-chc="gwm"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Memoria de Nombres</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_memoria_nombres_diferida" 
+                                 data-domain="memoria"
+                                 data-chc="gwm"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Memoria de Nombres Diferida</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_memoria_caras" 
+                                 data-domain="memoria"
+                                 data-chc="gv"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Memoria de Caras</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_memoria_caras_diferida" 
+                                 data-domain="memoria"
+                                 data-chc="gv"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Memoria de Caras Diferida</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_memoria_diseños" 
+                                 data-domain="memoria"
+                                 data-chc="gv"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Memoria de Diseños</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_memoria_diseños_diferida" 
+                                 data-domain="memoria"
+                                 data-chc="gv"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Memoria de Diseños Diferida</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_memoria_lista" 
+                                 data-domain="memoria"
+                                 data-chc="gwm"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Memoria de Lista</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_memoria_lista_diferida" 
+                                 data-domain="memoria"
+                                 data-chc="gwm"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Memoria de Lista Diferida</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                        </div>
+
+                        <div class="battery-section">
+                            <h4 class="section-title">Procesamiento Sensoriomotor</h4>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_coordinacion_visuomotora" 
+                                 data-domain="visoespacial"
+                                 data-chc="gv"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Coordinación Visuomotora</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_precision_visuomotora" 
+                                 data-domain="visoespacial"
+                                 data-chc="gv"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Precisión Visuomotora</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_imitacion_posturas" 
+                                 data-domain="visoespacial"
+                                 data-chc="gv"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Imitación de Posturas</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                        </div>
+
+                        <div class="battery-section">
+                            <h4 class="section-title">Percepción Social</h4>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_afecto_reconocimiento" 
+                                 data-domain="social"
+                                 data-chc="gc"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Reconocimiento de Afecto</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_teoria_mente" 
+                                 data-domain="social"
+                                 data-chc="gc"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Teoría de la Mente</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                        </div>
+
+                        <div class="battery-section">
+                            <h4 class="section-title">Procesamiento Visoespacial</h4>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_flechas" 
+                                 data-domain="visoespacial"
+                                 data-chc="gv"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Flechas</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_cubos" 
+                                 data-domain="visoespacial"
+                                 data-chc="gv"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Cubos</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_copia_diseños" 
+                                 data-domain="visoespacial"
+                                 data-chc="gv"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Copia de Diseños</span>
+                                <span class="test-scale">Escalar</span>
+                            </div>
+                            <div class="test-item" draggable="true" 
+                                 data-test="nepsy_rompecabezas_geometrico" 
+                                 data-domain="visoespacial"
+                                 data-chc="gv"
+                                 data-scale="scalar"
+                                 data-battery="NEPSY-II">
+                                <span class="drag-handle">⋮⋮</span>
+                                <span class="test-name">Rompecabezas Geométrico</span>
                                 <span class="test-scale">Escalar</span>
                             </div>
                         </div>
