--- a/evaluation.html
+++ b/evaluation.html
@@ -17,7 +17,9 @@
             <button id="backBtn" class="btn-secondary">← Volver a Configuración</button>
             <button id="generateBtn" class="btn-primary">Generar Perfil</button>
             <button id="clearBtn" class="btn-secondary">Limpiar Datos</button>
-            <button id="printBtn" class="btn-secondary">Imprimir</button>
+            <button id="printBtn" class="btn-secondary">🖨️ Imprimir</button>
+            <button id="exportPdfBtn" class="btn-primary">📄 Exportar PDF</button>
+            <button id="exportAsciiBtn" class="btn-secondary">📋 Copiar ASCII</button>
         </div>
 
         <div class="main-content">
