Añadir sección de bibliografía y marco teórico CHC
- Nueva página bibliografia.html con teoría CHC completa
- Explicación detallada de dominios cognitivos CHC (g, Gc, Gf, Gv, Gwm, Gs, Ga, Grw, Gq)
- Fundamentos del Cross-Battery Assessment (XBA)
- Referencias bibliográficas principales (Carroll, Cattell, Horn, McGrew, Flanagan)
- Botones de acceso desde todas las páginas principales
- Incluye consideraciones éticas y limitaciones
- Diseño responsive con estilos profesionales

--- a/config.html
+++ b/config.html
@@ -15,6 +15,7 @@
 
         <div class="toolbar">
             <button id="clearBtn" class="btn-secondary">Limpiar Selección</button>
+            <button onclick="window.location.href='bibliografia.html'" class="btn-secondary">📚 Bibliografía</button>
             <button id="continueBtn" class="btn-primary">Continuar a Evaluación →</button>
         </div>
 
