--- a/config.html
+++ b/config.html
@@ -29,7 +29,7 @@
                     <!-- WISC-V -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://web.teaediciones.com/WISC-V--ESCALA-DE-INTELIGENCIA-DE-WECHSLER-PARA-NINOS-V.aspx" target="_blank" rel="noopener noreferrer" title="Ver información en TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/producto/wisc-v" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
                                 WISC-V (Escala Wechsler)
                             </a>
                         </h3>
@@ -272,7 +272,7 @@
                     <!-- WISC-IV -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://web.teaediciones.com/WISC-IV--ESCALA-DE-INTELIGENCIA-DE-WECHSLER-PARA-NINOS-IV.aspx" target="_blank" rel="noopener noreferrer" title="Ver información en TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/producto/wisc-iv" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
                                 WISC-IV (Escala Wechsler)
                             </a>
                         </h3>
@@ -501,7 +501,7 @@
                     <!-- WPPSI-III -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://web.teaediciones.com/WPPSI-III--ESCALA-DE-INTELIGENCIA-DE-WECHSLER-PARA-PREESCOLAR-Y-PRIMARIA-III.aspx" target="_blank" rel="noopener noreferrer" title="Ver información en TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/producto/wppsi-iii" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
                                 WPPSI-III (Escala Wechsler Preescolar)
                             </a>
                         </h3>
@@ -696,7 +696,7 @@
                     <!-- CSAT-R -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://web.teaediciones.com/CSAT-R--TAREA-DE-ATENCION-SOSTENIDA-EN-LA-INFANCIA-REVISADA.aspx" target="_blank" rel="noopener noreferrer" title="Ver información en TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/producto/csat-r" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
                                 CSAT-R (Atención Sostenida)
                             </a>
                         </h3>
@@ -727,7 +727,7 @@
                     <!-- CARAS-R -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://web.teaediciones.com/CARAS-R--TEST-DE-PERCEPCION-DE-DIFERENCIAS-REVISADO.aspx" target="_blank" rel="noopener noreferrer" title="Ver información en TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/producto/caras-r" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
                                 CARAS-R (Atención Selectiva)
                             </a>
                         </h3>
@@ -768,7 +768,7 @@
                     <!-- ENFEN -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://web.teaediciones.com/ENFEN--EVALUACION-NEUROPSICOLOGICA-DE-LAS-FUNCIONES-EJECUTIVAS-EN-NINOS.aspx" target="_blank" rel="noopener noreferrer" title="Ver información en TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/producto/enfen" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
                                 ENFEN (Funciones Ejecutivas)
                             </a>
                         </h3>
@@ -839,7 +839,7 @@
                     <!-- NEPSY-II -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://web.teaediciones.com/NEPSY-II--EVALUACION-NEUROPSICOLOGICA-INFANTIL.aspx" target="_blank" rel="noopener noreferrer" title="Ver información en TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/producto/nepsy-ii" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
                                 NEPSY-II (Evaluación Neuropsicológica)
                             </a>
                         </h3>
@@ -1162,7 +1162,7 @@
                     <!-- PROLEC-R -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://web.teaediciones.com/PROLEC-R--BATERIA-DE-EVALUACION-DE-LOS-PROCESOS-LECTORES-REVISADA.aspx" target="_blank" rel="noopener noreferrer" title="Ver información en TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/producto/prolec-r" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
                                 PROLEC-R (Lectura)
                             </a>
                         </h3>
@@ -1263,7 +1263,7 @@
                     <!-- TALE -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://web.teaediciones.com/TALE--TEST-DE-ANALISIS-DE-LECTOESCRITURA.aspx" target="_blank" rel="noopener noreferrer" title="Ver información en TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/producto/tale" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
                                 TALE (Escritura)
                             </a>
                         </h3>
@@ -1294,7 +1294,7 @@
                     <!-- TEMA-3 -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://web.teaediciones.com/TEMA-3--TEST-DE-COMPETENCIA-MATEMATICA-BASICA.aspx" target="_blank" rel="noopener noreferrer" title="Ver información en TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/producto/tema-3" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
                                 TEMA-3 (Matemáticas)
                             </a>
                         </h3>
