Reducir header 50% y usar búsqueda del catálogo
- Reducir padding header: 60px → 30px (50%)
- Reducir h1: 3rem → 1.8rem (40%)
- Reducir subtitle: 1.25rem → 1rem (20%)
- Más espacio vertical para contenido principal
- Cambiar URLs a búsqueda del catálogo (?search=)
- Formato: /public/catalogo?search=[nombre-test]
- Evita redirecciones a página de inicio
- Los tests aparecen directamente en resultados de búsqueda
- Aplicado a config.html y evaluation.html

--- a/config.html
+++ b/config.html
@@ -29,7 +29,7 @@
                     <!-- WISC-V -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/producto/wisc-v" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=wisc-v" target="_blank" rel="noopener noreferrer" title="Buscar WISC-V en Hogrefe TEA Ediciones">
                                 WISC-V (Escala Wechsler)
                             </a>
                         </h3>
@@ -272,7 +272,7 @@
                     <!-- WISC-IV -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/producto/wisc-iv" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=wisc-iv" target="_blank" rel="noopener noreferrer" title="Buscar WISC-IV en Hogrefe TEA Ediciones">
                                 WISC-IV (Escala Wechsler)
                             </a>
                         </h3>
@@ -501,7 +501,7 @@
                     <!-- WPPSI-III -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/producto/wppsi-iii" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=wppsi" target="_blank" rel="noopener noreferrer" title="Buscar WPPSI-III en Hogrefe TEA Ediciones">
                                 WPPSI-III (Escala Wechsler Preescolar)
                             </a>
                         </h3>
@@ -696,7 +696,7 @@
                     <!-- CSAT-R -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/producto/csat-r" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=csat" target="_blank" rel="noopener noreferrer" title="Buscar CSAT-R en Hogrefe TEA Ediciones">
                                 CSAT-R (Atención Sostenida)
                             </a>
                         </h3>
@@ -727,7 +727,7 @@
                     <!-- CARAS-R -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/producto/caras-r" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=caras" target="_blank" rel="noopener noreferrer" title="Buscar CARAS-R en Hogrefe TEA Ediciones">
                                 CARAS-R (Atención Selectiva)
                             </a>
                         </h3>
@@ -768,7 +768,7 @@
                     <!-- ENFEN -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/producto/enfen" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=enfen" target="_blank" rel="noopener noreferrer" title="Buscar ENFEN en Hogrefe TEA Ediciones">
                                 ENFEN (Funciones Ejecutivas)
                             </a>
                         </h3>
@@ -839,7 +839,7 @@
                     <!-- NEPSY-II -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/producto/nepsy-ii" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=nepsy" target="_blank" rel="noopener noreferrer" title="Buscar NEPSY-II en Hogrefe TEA Ediciones">
                                 NEPSY-II (Evaluación Neuropsicológica)
                             </a>
                         </h3>
@@ -1162,7 +1162,7 @@
                     <!-- PROLEC-R -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/producto/prolec-r" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=prolec" target="_blank" rel="noopener noreferrer" title="Buscar PROLEC-R en Hogrefe TEA Ediciones">
                                 PROLEC-R (Lectura)
                             </a>
                         </h3>
@@ -1263,7 +1263,7 @@
                     <!-- TALE -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/producto/tale" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=tale" target="_blank" rel="noopener noreferrer" title="Buscar TALE en Hogrefe TEA Ediciones">
                                 TALE (Escritura)
                             </a>
                         </h3>
@@ -1294,7 +1294,7 @@
                     <!-- TEMA-3 -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/producto/tema-3" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=tema-3" target="_blank" rel="noopener noreferrer" title="Buscar TEMA-3 en Hogrefe TEA Ediciones">
                                 TEMA-3 (Matemáticas)
                             </a>
                         </h3>
