Corregir URLs: Escalas Wechsler a Pearson Clinical
- WISC-V, WISC-IV, WPPSI-III ahora apuntan a Pearson Clinical
- URL directa a ficha de producto en pearsonclinical.es
- Resto de tests mantienen búsqueda en Hogrefe-TEA
- Actualizado en config.html y script-evaluation.js
- Enlaces correctos según distribuidor oficial de cada test:
  * Pearson: WISC-V, WISC-IV, WPPSI-III (Wechsler)
  * Hogrefe-TEA: NEPSY-II, ENFEN, PROLEC-R, TALE, TEMA-3, CSAT-R, CARAS-R

--- a/config.html
+++ b/config.html
@@ -29,7 +29,7 @@
                     <!-- WISC-V -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=wisc-v" target="_blank" rel="noopener noreferrer" title="Buscar WISC-V en Hogrefe TEA Ediciones">
+                            <a href="https://www.pearsonclinical.es/wisc-v-escala-de-inteligencia-de-wechsler-para-ninos-v" target="_blank" rel="noopener noreferrer" title="Ver información en Pearson Clinical">
                                 WISC-V (Escala Wechsler)
                             </a>
                         </h3>
@@ -272,7 +272,7 @@
                     <!-- WISC-IV -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=wisc-iv" target="_blank" rel="noopener noreferrer" title="Buscar WISC-IV en Hogrefe TEA Ediciones">
+                            <a href="https://www.pearsonclinical.es/wisc-iv-escala-de-inteligencia-de-wechsler-para-ninos-iv" target="_blank" rel="noopener noreferrer" title="Ver información en Pearson Clinical">
                                 WISC-IV (Escala Wechsler)
                             </a>
                         </h3>
@@ -501,7 +501,7 @@
                     <!-- WPPSI-III -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=wppsi" target="_blank" rel="noopener noreferrer" title="Buscar WPPSI-III en Hogrefe TEA Ediciones">
+                            <a href="https://www.pearsonclinical.es/wppsi-iii-escala-de-inteligencia-de-wechsler-para-preescolar-y-primaria-iii" target="_blank" rel="noopener noreferrer" title="Ver información en Pearson Clinical">
                                 WPPSI-III (Escala Wechsler Preescolar)
                             </a>
                         </h3>
