--- a/config.html
+++ b/config.html
@@ -696,7 +696,7 @@
                     <!-- CSAT-R -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=csat" target="_blank" rel="noopener noreferrer" title="Buscar CSAT-R en Hogrefe TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/catalogo/producto/CSAT--TAREA-DE-ATENCION-SOSTENIDA-EN-LA-INFANCIA" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
                                 CSAT-R (Atención Sostenida)
                             </a>
                         </h3>
@@ -727,7 +727,7 @@
                     <!-- CARAS-R -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=caras" target="_blank" rel="noopener noreferrer" title="Buscar CARAS-R en Hogrefe TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/catalogo/producto/CARAS-R--TEST-DE-PERCEPCION-DE-DIFERENCIAS-R" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
                                 CARAS-R (Atención Selectiva)
                             </a>
                         </h3>
@@ -768,7 +768,7 @@
                     <!-- ENFEN -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=enfen" target="_blank" rel="noopener noreferrer" title="Buscar ENFEN en Hogrefe TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/catalogo/producto/ENFEN--EVALUACION-NEUROPSICOLOGICA-DE-LAS-FUNCIONES-EJECUTIVAS-EN-NINOS" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
                                 ENFEN (Funciones Ejecutivas)
                             </a>
                         </h3>
@@ -839,7 +839,7 @@
                     <!-- NEPSY-II -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=nepsy" target="_blank" rel="noopener noreferrer" title="Buscar NEPSY-II en Hogrefe TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/catalogo/producto/NEPSY-II--EVALUACION-NEUROPSICOLOGICA-INFANTIL" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
                                 NEPSY-II (Evaluación Neuropsicológica)
                             </a>
                         </h3>
@@ -1162,7 +1162,7 @@
                     <!-- PROLEC-R -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=prolec" target="_blank" rel="noopener noreferrer" title="Buscar PROLEC-R en Hogrefe TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/catalogo/producto/PROLEC-R--BATERIA-DE-EVALUACION-DE-LOS-PROCESOS-LECTORES-REVISADA" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
                                 PROLEC-R (Lectura)
                             </a>
                         </h3>
@@ -1263,7 +1263,7 @@
                     <!-- TALE -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=tale" target="_blank" rel="noopener noreferrer" title="Buscar TALE en Hogrefe TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/catalogo/producto/TALE--TEST-DE-ANALISIS-DE-LECTOESCRITURA" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
                                 TALE (Escritura)
                             </a>
                         </h3>
@@ -1294,7 +1294,7 @@
                     <!-- TEMA-3 -->
                     <div class="battery-group">
                         <h3 class="battery-title">
-                            <a href="https://www.hogrefe-tea.com/public/catalogo?search=tema-3" target="_blank" rel="noopener noreferrer" title="Buscar TEMA-3 en Hogrefe TEA Ediciones">
+                            <a href="https://www.hogrefe-tea.com/public/catalogo/producto/TEMA-3--TEST-DE-COMPETENCIA-MATEMATICA-BASICA-3" target="_blank" rel="noopener noreferrer" title="Ver información en Hogrefe TEA Ediciones">
                                 TEMA-3 (Matemáticas)
                             </a>
                         </h3>
